# smide

./: CMakeLists.txt  readme.md
examples/: proto.template.h  proto.template.jsonc  table.enum.xml
src/smide/: cli.cc  join.cc  readme.md  table.cc  template.cc
